# Stack-Overflow-RAG-

./: .env.example  .gitignore  README.md  download_stackoverflow_range.ps1  pyproject.toml  技术方案设计.md  项目分析报告.md  项目计划书.md
.pytest_tmp/test_cache_service_persists_to0/: cache.json
.pytest_tmp/test_index_catalog_repository_0/: index_catalog.json
.pytest_tmp/test_index_catalog_repository_1/: index_catalog.json
.pytest_tmp/test_index_state_repository_pe0/: index_state.json
.pytest_tmp/test_query_log_repository_pers0/: query_logs.jsonl
app/: __init__.py  main.py
app/core/: config.py  exceptions.py  logging.py
app/models/: __init__.py  backend_status.py  document.py  query_log.py
app/providers/: __init__.py
app/repositories/: document_repository.py  index_catalog_repository.py  index_state_repository.py  mysql_query_log_repository.py  query_log_repository.py
app/services/: answer_service.py  backend_health_service.py  cache_service.py  citation_service.py  context_service.py  metrics_service.py  preprocess_service.py  qa_service.py  redis_cache_service.py  rerank_service.py  retrieval_service.py  rewrite_service.py
app/stack_overflow_rag_qa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/tasks/: __init__.py  embedding_tasks.py  ingest_tasks.py  rebuild_tasks.py
app/utils/: hash_utils.py
data/indexes/: index_catalog.json  (+1 more)
docs/: rerank_strategy.md
evals/: retrieval_eval_set.json
scripts/: eval_phase2.py  eval_retrieval.py  ingest_stackoverflow.py  rebuild_index.py
stack_overflow_rag_qa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+68 files in other folders)
