[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stack-overflow-rag-qa"
version = "0.3.3"
description = "Stack Overflow RAG QA system phased scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.5",
    "redis>=5.0.7",
    "sqlalchemy>=2.0.31",
    "pymysql>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uvicorn]
factory = false

[tool.setuptools.packages.find]
where = ["app"]
include = ["app*"]
